--- a/src/game/index.html
+++ b/src/game/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>dlrexjs</title>
+  <title>httyd</title>
   <link rel="stylesheet" type="text/css" href="css/style.min.css">
 </head>
 <body id="t" class="neterror offline">
